# pyschism

./: pyproject.toml
examples/Bctides/: gen_bctides_global.py
pyschism/forcing/bctides/: fes2014.py  tides.py
