[project]
name = "pyschism"
version = "0.1.0"
description = ""
authors = [
    {name = "tomsail",email = "saillour.thomas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "appdirs (>=1.4.4,<2.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "f90nml (>=1.4.5,<2.0.0)",
    "cf-python (>=3.18.0,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tqdm-logging-wrapper (>=1.0.1,<2.0.0)",
    "seawater (>=3.3.5,<4.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "cdsapi (>=0.7.6,<0.8.0)",
    "xarray (>=2025.7.1,<2026.0.0)",
    "stormevents (>=2.3.5,<3.0.0)",
    "utm (>=0.8.1,<0.9.0)",
    "fiona (>=1.10.1,<2.0.0)",
    "wget (>=3.2,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
